# Arjan

2023/money/: perform.py  pyproject.toml
2023/openai/: app.py  explainer.py  test.py
2023/pandas2/: pyproject.toml
2023/py312/: fstrings.py  kwargs_typing.py  override.py
